force-app/main/default/objects/Behavior_Config__mdt/Behavior_Config__mdt.object-meta.xml
<CustomObject>
    <label>Behavior Config</label>
    <pluralLabel>Behavior Configs</pluralLabel>
</CustomObject>