force-app/main/default/objects/Behavior_Config__mdt/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
                <default>true</default>
                <label>Dog</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>