force-app/main/default/objects/Behavior_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protocol Scales</fullName>
                <default>true</default>
                <label>Protocol Scales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>